--- a/集群部署实现.md
+++ b/集群部署实现.md
@@ -1,1 +1,56 @@
-开新坑
+## 从shell到kubenetes---机机人的集群部署实现
+
+> 用于应对极端高负载场景下的机器人运维需求  
+
+
+# 集群化与批量部署
+
+如需批量部署，可采取以下方式：
+
+1.构建docker镜像并上传公共仓库
+
+2.构造shell（linux）/bat(windows)脚本
+
+3.使用批量ssh工具
+
+4.已安装崽的镜像复制
+
+这里我们以Pssh为例，提供基于Linux的一个批量搭建示例 (使用centos演示---Ubuntu或其它系统可供参考):
+
+设置epel源（已设置的忽略）并安装pssh
+```
+yum install -y epel-release&&yum install -y pssh  
+```
+使用密码登录
+```
+pssh -h pssh_hosts.txt -A -O PreferredAuthentications=password -i "uname -r"
+```
+pssh_hosts.txt中请填写用户名、主机名或IP地址端口号，每行一个，具体格式为：
+
+登录用户名@主机域名/ip : 端口号
+
+例如：
+```
+root@114.233.141.1:22
+yunzai@123.122.122.234:2333
+master@renruanwrong.top:13579
+```
+通常情况下，只填写ip/域名即可
+
+测试
+```
+pssh -i -h pssh_hosts.txt 'uptime'
+```
+出现success字样则说明配置完成，现在，你可以在多台服务器上同步执行指令力！
+
+举个栗子:
+```
+pssh -i -h pssh_hosts.txt 'yum install -y git'
+```
+文件分发
+```
+pscp -h pssh_hosts.txt   本地文件  目标目录
+```  
+未完待续
+
+
