--- a/集群部署实现.md
+++ b/集群部署实现.md
@@ -4,8 +4,8 @@
 
 
 # 集群化与批量部署
-
-如需批量部署，可采取以下方式：
+题外话：关于云服务器可不选配公网ip问题，集群只需要一个公共网络出口即可，VPC内部通信不需要公网ip。  
+如需批量部署，可采取以下方式：  
 
 1.构建docker镜像并上传公共仓库
 
